# landau

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json  test_import.py  test_poly_transform.py
.github/scripts/: parse_testplot_mention.py  select_testplot_args_from_diff.py  testplot_args.py  testplot_common.py
.github/workflows/: claude.yml  release-please.yml  test-minimum-deps.yml  testplot-mention.yml  testplot-triage.yml  testplot.yml  tests.yml  unittest.yml
.hypothesis/constants/: 0587b27066b9021d  060ca0b94ebd3d5f  31636de794894c38  3dc85917da6dcd8b  618b154baecd0b05  63172d8c51a18863  754f15d36077fd6a  aec335c61f5acf25  b2a305250dc6ba5e  b5e08ea183899c4b  c0ca44e31c75e74f  d4639c5c828b6dda  dd6caff5149ce808  e357d6fe9fb8c5be  e63313a48474a352  f88680a04963ac8d  f9829dfc54db836f
.hypothesis/examples/04e6b3400353b141/: 50524b1b8babd156  f30bf72db3b7b73f
.hypothesis/examples/50524b1b8babd156/: 26490dadf621dc23  a989b85a97b232ed
.hypothesis/examples/f30bf72db3b7b73f/: 00a76ad5b6064793  1cfe569715efda2d  2f021698f77c87a2  2fd185901feeec6f  30375208617be5dd  306b5e1f725a9f31  31105fca3bd9ad9e  311550460cb60ef3  424150e2dea6b993  5743f030837c5e78  5e7ff34a91317048  63bd6643b67ba1cc  (+27 more)
benchmarks/: README.md  bench_cc_early_abort.py  bench_cc_vectorized.py  bench_combined_refiner.py  bench_delaunay_propose.py  bench_fast_interpolating_phase.py  bench_interpolators.py  bench_monotone_slope.py  bench_softplus_surface_fit.py  bench_softplus_surface_minima.py  cc_sampling_density.py  fasttsp_budget_study.py  guess_mu_range_window.py  point_defect_expansions.py  poly_fasttsp_budget.py  poly_methods.py  profile_refiners.py  reproduce_sundman_aucu.py  segment_tsp_tour_rotation.py
docs/: api.md  conf.py  index.md  installation.md  notebooks.md  notebooks.rst  requirements.txt
docs/api/: calculate.md  interpolate.md  phases.md  plot.md  poly.md  resample.md
docs/issue_125/: demo.py
docs/notebooks/: IdealSolution.ipynb  Intermetallics.ipynb
landau/: __init__.py  _version.py  ase_phases.py  calculate.py  features.py  interpolate.py  phases.py  plot.py  poly.py  refine.py  resample.py
landau/interpolate/: __init__.py  basic.py  softplus.py  whitney.py
landau/phases/: __init__.py  asewrapper.py  compoundenergy.py  intermetallic.py  pointdefects.py
notebooks/: Basics.ipynb  ClausiusClapeyron.ipynb  ExcessFreeEnergy.ipynb  IdealSolution.ipynb  Intermetallics.ipynb  JumpRefinement.ipynb  PlotGallery.ipynb  PointDefects.ipynb  Toy.ipynb
notebooks/ASE/: EMT_CuAg.ipynb  FCC_BCC_Fe.ipynb  Hydrate.ipynb
notebooks/MgCa/: MgCa.ipynb  Plot.ipynb
scripts/: cc_demo.py
tests/: conftest.py  test_issue_1.py  test_poly.py
tests/integration/: test_border_coverage.py  testplots.py
tests/regression/: test_cluster_phase_pandas3.py  test_excess_endpoint_reference.py  test_issue_1.py  test_issue_155.py  test_issue_51.py  test_pandas_groupby.py  test_single_group_apply.py
tests/unit/: test_ase_phases.py  test_calculate.py  test_features.py  test_interpolate.py  test_issue_34.py  test_phases.py  test_phases_utils.py  test_plot.py  test_poly.py  test_quasi_chemical_phase.py  test_refine.py  test_resample.py  test_semigrand_broadcasting.py  test_softplus.py  test_whitney.py
(+18 files in other folders)
