[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landau"
version = "0.1.0"
authors = [
    { name="Marvin Poul", email="pmrv@posteo.de" },
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# python packaging is hot garbage
#license = "BSD"
#license-file = ["LICENSE"]
dependencies = [
    "matplotlib>=3,<4",
    "numpy<3",
    "pandas>=2,<3",
    "scipy",
    "shapely>1,<=2.0.7",
    "seaborn>=0.12,<=0.13.2",
    "scikit-learn>=1.5,<2",
]
