[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["landau"]

[tool.setuptools_scm]
version_file = "landau/_version.py"

[tool.ruff]
line-length = 120

[project]
description = "A library to calculate alloy thermodynamic equilibria and plot phase diagrams in the (semi-)grand ensemble."
name = "landau"
dynamic = ["version"]
authors = [
    { name="Marvin Poul", email="pmrv@posteo.de" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# python packaging is hot garbage
#license = "BSD"
#license-file = ["LICENSE"]
dependencies = [
    "matplotlib>=3,<4",
    "numpy>1,<3",
    "pandas>=2.2,<3",
    "scipy>=1.11.0,<2",
    "shapely>1,<=2.1.2",
    "seaborn>=0.12,<=0.13.2",
    "scikit-learn>=1.2,<2",
    "pyiron_snippets>=1,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=9,<10",
    "hypothesis>=6,<7",
]
constraints = ["polyfit"]
python-tsp = ["python-tsp>=0.4.2,<=0.5"]
fast-tsp = ["fast-tsp>=0.1.4,<=0.1.5"]

[project.urls]
Repository = "https://github.com/eisenforschung/landau"
