[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["landau"]

[tool.setuptools_scm]
version_file = "landau/_version.py"

[tool.ruff]
line-length = 120

[project]
description = "A library to calculate alloy thermodynamic equilibria and plot phase diagrams in the (semi-)grand ensemble."
name = "landau"
dynamic = ["version"]
authors = [
    { name="Marvin Poul", email="pmrv@posteo.de" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# python packaging is hot garbage
#license = "BSD"
#license-file = ["LICENSE"]
dependencies = [
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<4",
    "scipy>=1.11.2,<2",
    "shapely>=2.1,<=2.1.2",
    "seaborn>=0.12.2,<=0.13.2",
    "scikit-learn>=1.3.2,<2",
    "pyiron_snippets>=1,<2",
]

[project.optional-dependencies]
ase = ["ase>=3.20.0"]
test = [
    "pytest>=9,<10",
    "hypothesis>=6.71,<7",
    "ase>=3.20.0",
]
docs = [
    "sphinx",
    "furo",
    "myst-nb",
    "sphinx-autodoc-typehints",
]
constraints = ["polyfit"]
python-tsp = ["python-tsp>=0.4.2,<=0.5"]
fast-tsp = ["fast-tsp>=0.1.4,<=0.1.5"]

[project.urls]
Repository = "https://github.com/eisenforschung/landau"
